--- a/src/app/views/dashboard/pages/reviews-form/reviews-form.component.scss
+++ b/src/app/views/dashboard/pages/reviews-form/reviews-form.component.scss
@@ -1,133 +1,134 @@
 ion-content {
-    --padding-start: 24px;
-    --padding-end: 24px;
-    --padding-top: 20px;
+   --padding-start: 24px;
+   --padding-end: 24px;
+   --padding-top: 20px;
 
-    .content-wrapper {
-        align-items: flex-start;
+   .content-wrapper {
+      align-items: flex-start;
 
-        h1 {
-            font-size: 36px;
-            line-height: 45px;
-            font-family: var(--font-family-heading);
-            font-style: var(--font-style-heading);
-            font-weight: var(--font-weight-heading);
+      h1 {
+         font-size: 36px;
+         line-height: 45px;
+         font-family: var(--font-family-heading);
+         font-style: var(--font-style-heading);
+         font-weight: var(--font-weight-heading);
 
-            margin-bottom: 7px;
-        }
+         margin-bottom: 7px;
+      }
 
-        p {
-            margin: 5px auto;
-        }
+      p {
+         margin: 5px auto;
+      }
 
-        .italic-note {
-            font-family: var(--font-family-italic);
-            font-style: var(--font-style-italic);
-            font-weight: var(--font-weight-italic);
-            font-size: 12px;
-            line-height: 16px;
-            text-align: left;
-            margin: 0 0 12px;
-            opacity: 0.3;
-        }
+      .italic-note {
+         font-family: var(--font-family-italic);
+         font-style: var(--font-style-italic);
+         font-weight: var(--font-weight-italic);
+         font-size: 12px;
+         line-height: 16px;
+         text-align: left;
+         margin: 0 0 12px;
+         opacity: 0.3;
+      }
 
-        .questions {
-            margin-bottom: 6px;
-        }
-    }
+      .questions {
+         margin-bottom: 6px;
+      }
+   }
 
-    ion-card {
-        width: 100%;
-        height: 200px;
-        border-radius: 8px;
-        margin: 10px 0 27px;
-        box-shadow: 0px 4px 4px;
-        background-image: url(../../../../../assets/images/icon-camera.svg);
-        background-repeat: no-repeat;
-        background-position: center;
+   ion-card {
+      width: 100%;
+      height: 200px;
+      border-radius: 8px;
+      margin: 10px 0 27px;
+      box-shadow: 0px 4px 4px;
+      background-image: url(../../../../../assets/images/icon-camera.svg);
+      background-repeat: no-repeat;
+      background-position: center;
 
-        .photo {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+      .photo {
+         width: 100%;
+         height: 100%;
+         object-fit: cover;
 
-            img {
-                border-radius: 8px;
-            }
-        }
+         img {
+            border-radius: 8px;
+         }
+      }
+   }
 
-    }
+   .btn-wrapper {
+      width: 100%;
 
-    .btn-wrapper {
-        width: 100%;
+      .btn-add-photo {
+         width: 182px;
+         height: 37px;
+         margin: 0 auto 23px;
+         display: flex;
+         justify-content: center;
+      }
+   }
 
-        .btn-add-photo {
-            width: 182px;
-            height: 37px;
-            margin: 0 auto 23px;
-            display: flex;
-            justify-content: center;
-        }
-    }
+   ion-textarea {
+      border: 1px solid var(--ion-color-input-border);
+      --padding-start: 17px;
+      --padding-end: 17px;
+      --padding-top: 17px;
+      border-radius: 8px;
+      margin-bottom: 20px;
 
+      width: 100%;
+      height: 151px;
+   }
 
+   ion-list {
+      left: -20px;
+      position: relative;
+      margin-bottom: 30px;
 
-    ion-textarea {
-        border: 1px solid var(--ion-color-input-border);
-        --padding-start: 17px;
-        --padding-end: 17px;
-        --padding-top: 17px;
-        border-radius: 8px;
-        margin-bottom: 20px;
+      ion-item {
+         height: 32px;
+      }
 
-        width: 100%;
-        height: 151px;
-    }
+      ion-radio {
+         --color: var(--ion-color-input-border);
+      }
 
-    ion-list {
-        left: -20px;
-        position: relative;
-        margin-bottom: 30px;
+      ion-label {
+         color: var(--ion-color-font-main);
+         font-family: var(--font-family-body);
+         font-style: var(--font-style-body);
+         font-weight: var(--font-weight-body);
+         font-size: 14px;
+         line-height: 18px;
+      }
+   }
 
-        ion-item {
-            height: 32px;
-        }
+   .btn-submit {
+      display: block;
+      margin-top: 30px;
+      margin-bottom: 120px;
 
-        ion-radio {
-            --color: var(--ion-color-input-border);
-        }
+      &.submitted {
+         --ion-color-contrast: transparent !important;
+      }
 
-        ion-label {
-            color: var(--ion-color-font-main);
-            font-family: var(--font-family-body);
-            font-style: var(--font-style-body);
-            font-weight: var(--font-weight-body);
-            font-size: 14px;
-            line-height: 18px;
-        }
-    }
+      ion-spinner {
+         position: absolute;
+         left: 0;
+         right: 0;
+         top: 0;
+         bottom: 0;
+         margin: auto;
+      }
+   }
 
-    .btn-submit {
-        margin-top: 13px;
-        margin-bottom: 120px;
-
-        &.submitted {
-            --ion-color-contrast: transparent!important;
-        }
-
-        ion-spinner {
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            margin: auto;
-        }
-    }
-
-
+   .padder {
+      display: block;
+      height: 30px;
+   }
 }
 
 .invalid-photo {
-    border: 1px solid red;
+   border: 1px solid red;
 }
