--- a/src/app/views/login/login.page.html
+++ b/src/app/views/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content no-bounce has-bouncing="false" forceOverscroll="false" class="ion-padding" scroll-y="false">
+<ion-content no-bounce has-bouncing="false" forceOverscroll="false" class="ion-padding">
    <div class="content-wrapper column" #wrapper>
       <ion-img [src]="imgSrc" class="ion-align-self-center"></ion-img>
       <ion-card class="content-prompt" [ngClass]="{ 'loading': state === 'loading'}">
