--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
@@ -1,53 +1,60 @@
-
 .icon {
-    width: 23px;
-    height: 23px;
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 5px;
+   width: 23px;
+   height: 23px;
+   display: inline-block;
+   vertical-align: middle;
+   margin-right: 5px;
 
-    &.ingredients {
-        background: url(../../../../../assets/images/icon-ingredients.svg) center center no-repeat;
-        background-size: 90%;
-    }
+   &.ingredients {
+      background: url(../../../../../assets/images/icon-ingredients.svg) center center no-repeat;
+      background-size: 90%;
+   }
 }
 
 .text {
-    vertical-align: bottom;
-    color: var(--ion-color-font-main);
-    font-family: var(--font-family-body);
-    font-weight: var(--font-weight-body);
-    font-style: var(--font-style-body);
-    font-size: 13px;
-    line-height: 17px;
+   vertical-align: bottom;
+   color: var(--ion-color-font-main);
+   font-family: var(--font-family-body);
+   font-weight: var(--font-weight-body);
+   font-style: var(--font-style-body);
+   font-size: 13px;
+   line-height: 17px;
 }
 
 .total-progress {
-    font-size: 12px;
-    padding: 15px 0;
+   font-size: 12px;
+   padding: 15px 0;
 }
 
 .fade {
-    height: 2.8em;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 2;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
+   height: 2.8em;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   -webkit-line-clamp: 2;
+   display: -webkit-box;
+   -webkit-box-orient: vertical;
 }
 
-.show-more span, .prev-question span {
-    font-family: var(--font-family-show-more-button);
-    font-style: var(--font-style-show-more-button);
-    font-weight: var(--font-weight-show-more-button);
-    font-size: 14px;
-    line-height: 17px;
-    text-transform: uppercase;
+.show-more span,
+.prev-question span {
+   font-family: var(--font-family-show-more-button);
+   font-style: var(--font-style-show-more-button);
+   font-weight: var(--font-weight-show-more-button);
+   font-size: 14px;
+   line-height: 17px;
+   text-transform: uppercase;
 
-    color: var(--ion-color-primary);
-
+   color: var(--ion-color-primary);
 }
 
 .prev-question {
-    text-align: center;
+   text-align: center;
+}
+
+.ingredient-name {
+   display: inline-block;
+
+   &::first-letter {
+      text-transform: capitalize;
+   }
 }
